# glovehid

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x  openocd.cfg
deploy_scripts/: README.md  copy_uf2_to_device.py  gpio_interface.py  make_uf2.py  mcpgpio.py  uf2conv.py
src/: main.rs
