[package]
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "glovehid"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nrf52840-hal = "0.14.1"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
heapless = "0.7.10"


# this lets you use `cargo fix`!
[[bin]]
name = "glovehid"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
